# game

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
lib/: CMakeLists.txt
lib/fbgl/: CMakeLists.txt
lib/fbgl/inc/fbgl/: all.h  bitmap.h  buffer.h  pipeline.h  shader.h
lib/fbgl/src/: bitmap.c  buffer.c  pipeline.c
src/: main.c
